src/pages/AdminApp/components/CompanyDetails/index.less
.root {
  :global {
    .ant-input-disabled,
    .ant-select-disabled span {
      color: rgb(77, 77, 77) !important;
    }
  }
  p {
    margin: 0;
  }
  .textInput {
    width: 100%;
    height: 42px;
    background: #ffffff;
    box-sizing: border-box;
    border-radius: 5px;
    &:focus {
      box-shadow: none;
    }
  }
  .parentCompanySelect {
    .textInput();
    :global {
      .ant-select-selector {
        height: 42px !important;
        padding: 5px 11px 0;
        background: #ffffff;
        box-sizing: border-box;
        border-radius: 5px;
      }
      .ant-select-selection-search-input {
        padding-top: 10px !important;
      }
    }
  }
  .blockContent {
    width: 100%;
    height: fit-content;
    background: #ffffff;
    border: 1px solid #d6dce0;
    box-sizing: border-box;
    border-radius: 5px;
    .content {
      &__viewTopWithoutBorder {
        border-bottom: none !important;
      }
      &__viewTop {
        padding: 24px;
        display: flex;
        border-bottom: 1px solid #d6dce0;
        justify-content: space-between;
        align-items: center;
        &__legalAddress {
          display: flex;
          justify-content: space-between;
          align-items: center;
          border-top: 1px solid #e2e4e8;
        }
        .title {
          font-weight: 700;
          font-size: 16px;
          line-height: 19px;
          color: #161c29;
        }
        .editBtn {
          cursor: pointer;
          span {
            font-weight: bold;
            font-size: 14px;
            display: flex;
            text-decoration-line: underline;
            color: #2c6df9;
          }
          &:hover {
            opacity: 0.7;
          }
          .wrapBtn {
            display: flex;
            flex-direction: row;
            img {
              margin-right: 10px;
            }
            .cancelText {
              color: #666;
            }
          }
        }
      }
      &__viewBottom {
        height: auto;
        padding: 30px;
        font-size: 13px;
        line-height: 15px;
        color: #161c29;
        &__row {
          display: flex;
          justify-content: space-between;
          // align-items: center;
          margin-bottom: 20px;
          .viewFormVertical {
            width: fit-content;
            :global {
              .ant-input {
                .textInput();
                // width: 187px !important;
              }
              .ant-select-focused:not(.ant-select-disabled).ant-select:not(.ant-select-customize-input)
                .ant-select-selector {
                box-shadow: none;
              }
              .ant-select-single:not(.ant-select-customize-input) .ant-select-selector {
                padding: 5px 11px 0;
                width: 100%;
                // width: 187px;
                height: 42px;
                background: #ffffff;
                box-sizing: border-box;
                border-radius: 5px;
              }
              .ant-select-single:not(.ant-select-customize-input)
                .ant-select-selector
                .ant-select-selection-search-input {
                height: 36px;
              }
            }
          }
          &__textLabel {
            // width: 151px;
            padding-top: 11px;
          }
          &__textLabelVertical {
            margin-bottom: 10px;
          }
          :global {
            .ant-form-item {
              margin-bottom: 0px;
            }
            .ant-input {
              .textInput();
            }
          }
        }
        div:last-child {
          margin-bottom: 0;
        }
      }
    }
  }
  .viewBtn {
    width: 100%;
    height: fit-content;
    margin-top: 20px;
    display: flex;
    justify-content: flex-end;
    .btnSubmit {
      background: #ffa100;
      border-radius: 25px;
      height: 40px;
      width: 150px;
      font-weight: 500;
      font-size: 14px;
      line-height: 16px;
      text-align: center;
      color: #ffffff;
      border: none;
    }
  }
}
.loadingSpin {
  width: 100%;
  padding: 50px;
  display: flex;
  justify-content: center;
  align-items: center;
}
.hidden {
  display: none;
}

